tests/negative/gold/prefix_decrement_test.gold
tests/negative/prefix_decrement_test.toit:9:3: error: Prefix decrement has been removed
  --x
  ^~~
Compilation failed.
